<resources>
    <string name="app_name">ShoppingList</string>
    <string name="AddNewList">New List</string>
    <string name="ListsTitle">My Lists</string>
    <string name="AddNewEntry">New Entry</string>
    <string name="options">Options</string>
    <string name="deleteAllEntries">Delete All Entries</string>
    <string name="CheckAll">Check All</string>
    <string name="share">Share</string>
    <string name="deleteAllLists">Delete All Lists</string>
    <string name="done">Done</string>
    <string name="name_of_the_list">Name of the list</string>
    <string name="ShoppingListFragmentTitle">Shopping List</string>
    <string name="ShoppingListsFragmentTitle">Shopping Lists</string>
    <string name="newEntryFragmentTitle">New Shopping Entry</string>
    <string name="bought">Bought</string>
    <string name="modifyEntryFragmentTitle">Modify Entry</string>
    <string name="deleteEntry">Delete Entry</string>
    <string name="DeleteAllChecked">Delete All Checked</string>
    <string name="EditList">Edit List</string>
    <string name="EditShoppingLists">Edit</string>
    <string name="SelectListForModification">Select a List for Modification</string>
    <string name="searchEntry">Search or create new entry</string>
    <string name="deleteHistory">Delete History</string>
    <string name="Camera">Camera</string>
    <string name="Archive">From Archive</string>
    <string name="take_picture">Take Picture</string>
    <string name="Camera_persective">Camera Perspective</string>
    <string name="ChooseImage">Choose an image</string>
    <string name="ModifyImage">Modify Image</string>
    <string name="welcome">WELCOME</string>
    <string name="fragment_login">Login</string>
    <string name="signOut">Sign Out</string>
    <string name="Details">Details</string>
    <string name="unitOfQuantity">Unit of Quantity</string>
    <string name="quantity">Quantity</string>
    <string name="nameOfProduct">Name of Product</string>
    <string name="Back">Back</string>
    <string name="gallery">Gallery</string>
    <string name="modify_">Modify</string>
    <string name="email_adress">Email Adress</string>
    <string name="DeleteImage">Remove</string>
</resources>