<?xml version="1.0" encoding="utf-8"?>
<menu  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_shoppingList_check_all"
        android:title="@string/CheckAll"
        android:icon="@drawable/flush_checked"
        app:showAsAction="always" />

    <item android:id="@+id/menu_shoppingList_delete_all_checked"
        android:title="@string/DeleteAllChecked"
        android:icon="@drawable/delete_all"
        app:showAsAction="always" />

    <item
        android:id="@+id/options"
        android:title="@string/options"
        android:orderInCategory="101"
        app:showAsAction="always"
        android:icon="@drawable/vertical_dot_options">

        <menu>
            <group android:id="@+id/menu_shoppinglist_grp1">
                <item android:id="@+id/menu_item_share"
                    android:title="@string/share"
                    android:icon="@drawable/share"
                    app:showAsAction="ifRoom"/>
            </group>
            <group android:id="@+id/menu_shoppinglist_grp2">
                <item android:id="@+id/menuItemDeleteAllEntries"
                    android:title="@string/deleteAllEntries"
                    android:icon="@drawable/delete_all"
                    app:showAsAction="ifRoom" />
            </group>
            </menu>

    </item>
</menu>