<?xml version="1.0" encoding="utf-8"?>
<menu  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/Main_menu_options"
        android:title="@string/options"
        android:orderInCategory="101"
        app:showAsAction="always"
        android:icon="@drawable/vertical_dot_options">

        <menu >
            <group android:id="@+id/gr3">
                <item android:id="@+id/Main_menu_edit"
                    android:title="@string/EditShoppingLists"
                    android:icon="@drawable/ic_edit"
                    app:showAsAction="ifRoom" />
            </group>

            <group android:id="@+id/gr2">
                <item android:id="@+id/Main_menuItemDeleteAllLists"
                    android:title="@string/deleteAllLists"
                    android:icon="@drawable/delete_all"
                    app:showAsAction="never" />
            </group>

            <group android:id="@+id/gr4">
                <item android:id="@+id/Main_menu_delete_history"
                    android:title="@string/deleteHistory"
                    android:icon="@drawable/delete_all"
                    app:showAsAction="never" />
            </group>

            <group android:id="@+id/gr5">
                <item android:id="@+id/Main_menu_sign_out"
                    android:title="@string/signOut"
                    android:icon="@drawable/ic_close"
                    app:showAsAction="never" />
            </group>

        </menu>
    </item>
</menu>