<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/shoppingListsFragment">

    <fragment
        android:id="@+id/shoppingListsFragment"
        android:name="de.db.shoppinglist.view.ShoppingListsFragment"
        android:label="@string/ShoppingListsFragmentTitle">
        <action
            android:id="@+id/action_shoppingListsFragment_to_shoppingListFragment"
            app:destination="@id/shoppingListFragment" />
    </fragment>
    <fragment
        android:id="@+id/shoppingListFragment"
        android:name="de.db.shoppinglist.view.ShoppingListFragment"
        android:label="@string/ShoppingListFragmentTitle"
        tools:layout="@layout/fragment_shoppinglist" >
        <action
            android:id="@+id/action_shoppingListFragment_to_newEntryFragment"
            app:destination="@id/newEntryFragment"/>
        <action
            android:id="@+id/action_shoppingListFragment_to_modifyEntryFragment"
            app:destination="@id/modifyEntryFragment" />
        <argument
            android:name="listName"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/newEntryFragment"
        android:name="de.db.shoppinglist.view.NewEntryFragment"
        android:label="@string/newEntryFragmentTitle"
        tools:layout="@layout/fragment_new_entry" >
        <argument
            android:name="listName"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/modifyEntryFragment"
        android:name="de.db.shoppinglist.view.ModifyEntryFragment"
        android:label="@string/modifyEntryFragmentTitle"
        tools:layout="@layout/fragment_modify_entry" >
        <argument
            android:name="entry"
            app:argType="de.db.shoppinglist.model.ShoppingEntry" />
        <argument
            android:name="listName"
            app:argType="string" />
    </fragment>
</navigation>