<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.TakeImageFragment"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/displayImageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:srcCompat="@drawable/ic_launcher_background"
        android:layout_weight="0.6"
        android:layout_marginBottom="0dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/displayImageView"
        android:orientation="horizontal"
        android:layout_weight="0.4"
        android:gravity="center"
        >

        <Button
            android:id="@+id/cameraBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Camera"
            android:layout_gravity="start"
            />

        <Button
            android:id="@+id/take_image_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DeleteImage"
            android:layout_gravity="center_horizontal"
            android:layout_margin="25dp"
            android:visibility="invisible"
            android:background="@color/red"
            />

        <Button
            android:id="@+id/galleryBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            android:layout_gravity="right"/>
    </LinearLayout>
</LinearLayout>