<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/tools"
    app:cardCornerRadius="0dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    app:cardElevation="4dp"
    card_view:cardUseCompatPadding="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/item_search_image"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:scaleType="fitCenter"
        android:layout_gravity="center_vertical"/>
<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/item_search_name_of_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameOfProduct"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/item_search_unit_of_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unitOfQuantity"
        android:gravity="right"
        android:layout_toRightOf="@+id/item_search_name_of_product"
        android:layout_alignParentRight="true"
        android:textSize="@dimen/text_size"
        />

    <TextView
        android:id="@+id/item_search_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Details"
        android:layout_below="@id/item_search_name_of_product"
        android:textSize="@dimen/text_size"
        />
</RelativeLayout>
</LinearLayout>


</androidx.cardview.widget.CardView>